@@ -2,12 +2,12 @@
 .\"     Title: mpd-sima
 .\"    Author: Jack Kaliko <kaliko@azylum.org>
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 09/20/2015
+.\"      Date: 10/11/2015
 .\"    Manual: mpd-sima 0.14.0 User Manual
 .\"    Source: mpd-sima
 .\"  Language: English
 .\"
-.TH "MPD\-SIMA" "1" "09/20/2015" "mpd-sima" "mpd-sima 0.14.0 User Manual"
+.TH "MPD\-SIMA" "1" "10/11/2015" "mpd-sima" "mpd-sima 0.14.0 User Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -252,6 +252,13 @@ syntax as documented in mpc manual, cf\&.
 
 .br
 To use a password, provide a value of the form "password@host"\&.
+.RE
+.PP
+\fBHTTP_PROXY\fR, \fBHTTPS_PROXY\fR
+.RS 4
+mpd\-sima honors
+\fBHTTP_PROXY\fR
+environment variables\&.
 .RE
 .SH "CONFIGURATION"
 .PP
